--- a/Udemy/myudemylandingpage/src/index.css
+++ b/Udemy/myudemylandingpage/src/index.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes example1 {
+  0%   { left:-100%;}
+  100% { left:0%;}
+}
+
+/* The element to apply the animation to */
+.inframeleft {
+  position: relative;
+  animation-name: example1;
+  animation-duration: 4s;
+}
+@keyframes example2 {
+  0%   { left:0%;}
+  100% { left:100%;}
+}
+
+/* The element to apply the animation to */
+.outframeleft {
+  position: relative;
+  animation-name: example2;
+  animation-duration: 4s;
+}
+.purp {
+  background-color: rgb(171,88,168 );
+}
